--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 aiohttp = "^3.8.4"
+opentelemetry-api = "^1.16.0"
+opentelemetry-sdk = "^1.16.0"
 
 [tool.poetry.dev-dependencies]
 
