--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 aiohttp = "^3.8.4"
 opentelemetry-api = "^1.20.0"
 opentelemetry-sdk = "^1.20.0"
+opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
 
 [tool.poetry.dev-dependencies]
 
